force-app/main/default/objects/DocumentsAttendus__c/DocumentsAttendus__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Documents attendus en fonction du mode de financement</description>
    <label>Documents attendus</label>
</CustomObject>