force-app/main/default/objects/DocumentsAttendus__c/fields/AVI__c.field-meta.xml
<CustomField>
    <fullName>AVI__c</fullName>
    <inlineHelpText>CNI, RIB, J. Domicile et OTHER</inlineHelpText>
    <label>Avis d&apos;imposition sur le revenu</label>
    <length>30</length>
    <type>Text</type>
</CustomField>