force-app/main/default/objects/DocumentsAttendus__c/fields/CHQ__c.field-meta.xml
<CustomField>
    <fullName>CHQ__c</fullName>
    <inlineHelpText>CNI, RIB, J. Domicile et OTHER</inlineHelpText>
    <label>Chèque annulé</label>
    <length>30</length>
    <type>Text</type>
</CustomField>