force-app/main/default/objects/DocumentsAttendus__c/fields/IDE__c.field-meta.xml
<CustomField>
    <fullName>IDE__c</fullName>
    <inlineHelpText>CNI, RIB, J. Domicile et OTHER</inlineHelpText>
    <label>Pièce d&apos;identité (PC, CI, Passeport)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>