force-app/main/default/objects/DocumentsAttendus__c/fields/RIB__c.field-meta.xml
<CustomField>
    <fullName>RIB__c</fullName>
    <inlineHelpText>CNI, RIB, J. Domicile et OTHER</inlineHelpText>
    <label>Releve d&apos;identité bancaire</label>
    <length>30</length>
    <type>Text</type>
</CustomField>