force-app/main/default/objects/DocumentsAttendus__c/fields/SAL__c.field-meta.xml
<CustomField>
    <fullName>SAL__c</fullName>
    <inlineHelpText>CNI, RIB, J. Domicile et OTHER</inlineHelpText>
    <label>Bulletin de salaire</label>
    <length>30</length>
    <type>Text</type>
</CustomField>